# DWES-Parcial-Febrero2026

./: README.md  pyproject.toml
empresa_dwes/: manage.py
empresa_dwes/empresa_dwes/: asgi.py  settings.py  urls.py  wsgi.py
